docs: big cleanup of inaccurate docs

--- a/docs/content/1.introduction/1.getting-started.md
+++ b/docs/content/1.introduction/1.getting-started.md
@@ -7,56 +7,69 @@ navigation:
 
 ## Quick Start
 
+The Universal Data Layer currently provides a GraphQL server with a simple API. Here's how to get started:
+
 ### Installation
 
-Install the core package and your desired data source plugins:
+You can install the core package or use it directly with npx:
 
 ```bash
-npm install @universal-data-layer/next @universal-data-layer/contentful
+# Install the package
+npm install universal-data-layer
+
+# Or use without installation
+npx universal-data-layer
 ```
 
-### Configuration
+### Starting the Server
 
-Create `data-layer.config.js` in your project root:
+Once installed, you can start the GraphQL server:
 
-```javascript
-module.exports = {
-  plugins: [
-    '@universal-data-layer/contentful',
-    '@universal-data-layer/shopify',
-  ],
-};
+```bash
+# If installed globally or via npx
+universal-data-layer
+
+# With custom port (default is 4000)
+universal-data-layer --port 8080
+
+# If installed locally in a project
+npx universal-data-layer
 ```
 
-### Environment Variables
+### Available Endpoints
 
-Add your data source credentials to `.env`:
+Once the server is running, you'll have access to:
 
-```env
-# Contentful
-CONTENTFUL_SPACE_ID=your_space_id
-CONTENTFUL_ACCESS_TOKEN=your_access_token
+- **GraphQL API**: `http://localhost:4000/graphql`
+- **GraphiQL Interface**: `http://localhost:4000/graphiql` (for exploring the API)
 
-# Shopify
-SHOPIFY_STORE_DOMAIN=your-store.myshopify.com
-SHOPIFY_STOREFRONT_ACCESS_TOKEN=your_token
-```
+### Making Your First Query
 
-### Update Scripts
+The current schema provides a simple `version` query:
 
-Replace your Next.js scripts in `package.json`:
-
-```json
-{
-  "scripts": {
-    "dev": "next-data-layer dev",
-    "build": "next-data-layer build"
-  }
+```graphql
+query {
+  version
 }
 ```
 
+You can test it using curl:
+
+```bash
+curl http://localhost:4000/graphql \
+  -H "Content-Type: application/json" \
+  -d '{"query":"{ version }"}'
+```
+
+Or visit the GraphiQL interface at `http://localhost:4000/graphiql` to explore interactively.
+
 ## What's Next?
 
-- [Learn about core concepts](/introduction/concepts)
-- [Explore the API reference](/api/graphql)
-- [View example queries](/api/examples)
+This is an early-stage project in active development. The current implementation provides the foundation for a plugin-based data layer system. Future updates will include:
+
+- Plugin system for connecting various data sources
+- Caching strategies
+- Data transformation pipelines
+- Framework-specific adapters
+
+For now, you can explore the GraphQL API using the GraphiQL interface and check the [project repository](https://github.com/dawidurbanski/universal-data-layer) for updates.
