docs: update getting started guide to include plugin usage and configuration
- Added section on using plugins with example configuration for udl.config.js
- Updated "What's Next?" section with links to Plugin System and API documentation
- Enhanced clarity on project status and future updates

--- a/docs/content/1.introduction/1.getting-started.md
+++ b/docs/content/1.introduction/1.getting-started.md
@@ -63,13 +63,32 @@ curl http://localhost:4000/graphql \
 
 Or visit the GraphiQL interface at `http://localhost:4000/graphiql` to explore interactively.
 
+## Using Plugins
+
+UDL supports a plugin-based architecture for extending functionality. To use plugins, create a `udl.config.js` file:
+
+```javascript
+// udl.config.js
+export const config = {
+  port: 4000,
+  plugins: [
+    '@universal-data-layer/contentful',
+    {
+      name: '@universal-data-layer/shopify',
+      options: {
+        apiKey: process.env.SHOPIFY_API_KEY,
+      },
+    },
+  ],
+};
+```
+
+Learn more in the [Plugin System documentation](/plugins/overview).
+
 ## What's Next?
 
-This is an early-stage project in active development. The current implementation provides the foundation for a plugin-based data layer system. Future updates will include:
+- [Plugin System](/plugins/overview) - Learn about the plugin architecture
+- [Creating Plugins](/plugins/creating-plugins) - Build your own plugins
+- [API Documentation](/other/api) - Explore the API
 
-- Plugin system for connecting various data sources
-- Caching strategies
-- Data transformation pipelines
-- Framework-specific adapters
-
-For now, you can explore the GraphQL API using the GraphiQL interface and check the [project repository](https://github.com/dawidurbanski/universal-data-layer) for updates.
+This is an early-stage project in active development. Check the [project repository](https://github.com/dawidurbanski/universal-data-layer) for updates.
