docs: enhance getting started guide with installation instructions and code examples for UDL

--- a/docs/content/1.introduction/1.getting-started.md
+++ b/docs/content/1.introduction/1.getting-started.md
@@ -9,32 +9,68 @@ navigation:
 
 The Universal Data Layer currently provides a GraphQL server with a simple API. Here's how to get started:
 
-### Installation
-
-You can install the core package or use it directly with npx:
-
-```bash
-# Install the package
-npm install universal-data-layer
-
-# Or use without installation
+```bash [Terminal]
 npx universal-data-layer
 ```
+
+## Installation (locally, or globally with `-g`)
+
+<code-group>
+
+```bash [npm]
+npm install universal-data-layer
+```
+
+```bash [pnpm]
+pnpm add universal-data-layer
+```
+
+```bash [yarn]
+yarn add universal-data-layer
+```
+
+```bash [bun]
+bun add universal-data-layer
+```
+
+</code-group>
+
 
 ### Starting the Server
 
 Once installed, you can start the GraphQL server:
 
-```bash
-# If installed globally or via npx
-universal-data-layer
+<code-group>
 
-# With custom port (default is 4000)
-universal-data-layer --port 8080
-
-# If installed locally in a project
+```bash [npx]
 npx universal-data-layer
 ```
+
+```bash [npm]
+# if installed globally
+universal-data-layer
+
+# if installed locally and added to scripts as "udl"
+npm run udl
+```
+
+```bash [yarn]
+# if installed globally
+universal-data-layer
+
+# if installed locally and added to scripts as "udl"
+yarn udl
+```
+
+```bash [bun]
+# if installed globally
+universal-data-layer
+
+# if installed locally and added to scripts as "udl"
+bun udl
+```
+
+</code-group>
 
 ### Available Endpoints
 
@@ -47,7 +83,7 @@ Once the server is running, you'll have access to:
 
 The current schema provides a simple `version` query:
 
-```graphql
+```graphql [query.graphql]
 query {
   version
 }
@@ -55,7 +91,7 @@ query {
 
 You can test it using curl:
 
-```bash
+```bash [Terminal]
 curl http://localhost:4000/graphql \
   -H "Content-Type: application/json" \
   -d '{"query":"{ version }"}'
@@ -67,8 +103,7 @@ Or visit the GraphiQL interface at `http://localhost:4000/graphiql` to explore i
 
 UDL supports a plugin-based architecture for extending functionality. To use plugins, create a `udl.config.js` file:
 
-```javascript
-// udl.config.js
+```js [udl.config.js]
 export const config = {
   port: 4000,
   plugins: [
