--- a/docs/content/2.plugins/2.creating-plugins.md
+++ b/docs/content/2.plugins/2.creating-plugins.md
@@ -13,7 +13,7 @@ Creating a UDL plugin is straightforward. A plugin is essentially a package with
 
 At minimum, a plugin needs:
 
-```
+```bash
 my-plugin/
 ├── package.json
 ├── udl.config.js
@@ -24,8 +24,7 @@ my-plugin/
 
 Create a `udl.config.js` file at the root of your plugin:
 
-```javascript
-// udl.config.js
+```js [udl.config.js]
 export const config = {
   type: 'source',           // Plugin type: 'source' or 'core'
   name: 'my-plugin',        // Plugin name
@@ -45,7 +44,7 @@ export function onLoad({ options, config }) {
 
 Source plugins connect to external data sources:
 
-```javascript
+```js [udl.config.js]
 export const config = {
   type: 'source',
   name: 'my-data-source',
@@ -63,23 +62,6 @@ export function onLoad({ options, config }) {
 }
 ```
 
-### Core Plugin
-
-Core plugins extend the UDL system functionality:
-
-```javascript
-export const config = {
-  type: 'core',
-  name: 'my-core-plugin',
-  version: '1.0.0',
-};
-
-export function onLoad({ options, config }) {
-  // Extend core functionality
-  // Add middleware, modify schema, etc.
-}
-```
-
 ## The onLoad Hook
 
 The `onLoad` function is your plugin's initialization point. It receives a context object with:
@@ -90,7 +72,7 @@ The `onLoad` function is your plugin's initialization point. It receives a conte
 
 Plugin-specific options passed during registration:
 
-```javascript
+```js [udl.config.js]
 export function onLoad({ options }) {
   const {
     apiKey,
@@ -106,35 +88,12 @@ export function onLoad({ options }) {
 
 The application's UDL configuration:
 
-```javascript
+```js [udl.config.js]
 export function onLoad({ config }) {
   const { port, host, endpoint } = config;
 
   // Access app-level configuration
   console.log(`Server will run on ${host}:${port}`);
-}
-```
-
-## Real-World Example: Contentful Plugin
-
-Here's the actual Contentful plugin from the UDL repository:
-
-```javascript
-// packages/contentful/udl.config.js
-export const config = {
-  type: 'source',
-  name: 'contentful',
-  version: '0.0.1',
-};
-
-export function onLoad({ options, config }) {
-  console.log('Plugin Contentful loaded', options, config);
-
-  // In a real implementation, you would:
-  // 1. Initialize Contentful client with options.spaceId and options.accessToken
-  // 2. Set up data fetching functions
-  // 3. Extend GraphQL schema with Contentful types
-  // 4. Register resolvers for Contentful queries
 }
 ```
 
@@ -144,7 +103,7 @@ export function onLoad({ options, config }) {
 
 Always validate required options in your `onLoad` hook:
 
-```javascript
+```js [udl.config.js]
 export function onLoad({ options }) {
   if (!options?.apiKey) {
     throw new Error('apiKey is required for my-plugin');
@@ -160,7 +119,7 @@ export function onLoad({ options }) {
 
 Wrap initialization logic in try-catch blocks:
 
-```javascript
+```js [udl.config.js]
 export async function onLoad({ options }) {
   try {
     await initializeClient(options);
@@ -176,7 +135,7 @@ export async function onLoad({ options }) {
 
 The `onLoad` hook supports async operations:
 
-```javascript
+```js [udl.config.js]
 export async function onLoad({ options }) {
   // Async initialization
   await setupDatabase(options);
@@ -189,14 +148,16 @@ export async function onLoad({ options }) {
 
 If using TypeScript, export your types:
 
-```typescript
-// types.ts
+<code-group>
+
+```ts [types.ts]
 export interface MyPluginOptions {
   apiKey: string;
   environment?: 'production' | 'staging';
 }
+```
 
-// udl.config.ts
+```js [udl.config.js]
 import type { MyPluginOptions } from './types';
 
 export const config = {
@@ -211,13 +172,15 @@ export function onLoad({ options }: { options?: MyPluginOptions }) {
 }
 ```
 
+</code-group>
+
 ## Publishing Your Plugin
 
 ### As an npm Package
 
 1. Add UDL as a peer dependency:
 
-```json
+```json [package.json]
 {
   "name": "udl-plugin-myservice",
   "version": "1.0.0",
@@ -229,7 +192,7 @@ export function onLoad({ options }: { options?: MyPluginOptions }) {
 
 2. Ensure `udl.config.js` is included in published files:
 
-```json
+```json [package.json]
 {
   "files": [
     "dist",
@@ -240,7 +203,7 @@ export function onLoad({ options }: { options?: MyPluginOptions }) {
 
 3. Publish to npm:
 
-```bash
+```bash [Terminal]
 npm publish
 ```
 
@@ -248,8 +211,7 @@ npm publish
 
 You can also use plugins locally without publishing:
 
-```javascript
-// app's udl.config.js
+```js [udl.config.js]
 export const config = {
   plugins: [
     './local-plugins/my-plugin',  // Relative path
