--- a/docs/content/2.plugins/4.lifecycle-methods.md
+++ b/docs/content/2.plugins/4.lifecycle-methods.md
@@ -17,7 +17,7 @@ Currently, UDL provides one main lifecycle hook:
 
 The `onLoad` hook is called when a plugin is loaded and initialized. This is where you perform setup, initialize connections, and configure your plugin.
 
-```javascript
+```js [udl.config.js]
 export function onLoad({ options, config }) {
   // Plugin initialization code
 }
@@ -56,8 +56,7 @@ The `onLoad` hook receives a context object with two properties:
 
 Plugin-specific configuration passed during registration:
 
-```javascript
-// Application config
+```js [udl.config.js]
 export const config = {
   plugins: [
     {
@@ -81,8 +80,7 @@ export function onLoad({ options }) {
 
 The entire application configuration:
 
-```javascript
-// Application config
+```js [udl.config.js]
 export const config = {
   port: 4000,
   host: 'localhost',
@@ -102,7 +100,7 @@ export function onLoad({ config }) {
 
 The `onLoad` hook supports async operations. UDL will wait for the promise to resolve before continuing:
 
-```javascript
+```js [udl.config.js]
 export async function onLoad({ options }) {
   // Async initialization
   await connectToDatabase(options.connectionString);
@@ -119,7 +117,7 @@ export async function onLoad({ options }) {
 
 If a plugin's `onLoad` fails, it should throw an error:
 
-```javascript
+```js [udl.config.js]
 export function onLoad({ options }) {
   if (!options?.apiKey) {
     throw new Error('API key is required');
@@ -135,7 +133,7 @@ export function onLoad({ options }) {
 
 For non-critical failures, log warnings instead:
 
-```javascript
+```js [udl.config.js]
 export async function onLoad({ options }) {
   try {
     await warmupCache();
@@ -149,7 +147,7 @@ export async function onLoad({ options }) {
 
 Handle async errors properly:
 
-```javascript
+```js [udl.config.js]
 export async function onLoad({ options }) {
   try {
     await initializeService(options);
@@ -164,7 +162,7 @@ export async function onLoad({ options }) {
 
 ### 1. Validate Required Options Early
 
-```javascript
+```js [udl.config.js]
 export function onLoad({ options }) {
   const required = ['apiKey', 'secretKey', 'endpoint'];
 
@@ -180,7 +178,7 @@ export function onLoad({ options }) {
 
 ### 2. Use Async/Await for I/O Operations
 
-```javascript
+```js [udl.config.js]
 export async function onLoad({ options }) {
   await Promise.all([
     connectToDatabase(options),
@@ -192,7 +190,7 @@ export async function onLoad({ options }) {
 
 ### 3. Provide Detailed Logging
 
-```javascript
+```js [udl.config.js]
 export async function onLoad({ options }) {
   console.log(`[${config.name}] Initializing...`);
 
@@ -210,7 +208,7 @@ export async function onLoad({ options }) {
 
 Make plugin functionality accessible:
 
-```javascript
+```js [udl.config.js]
 let client;
 
 export async function onLoad({ options }) {
