--- a/docs/content/2.plugins/3.registering-plugins.md
+++ b/docs/content/2.plugins/3.registering-plugins.md
@@ -13,8 +13,7 @@ To use plugins in your Universal Data Layer application, you need to register th
 
 Create a `udl.config.js` file in your project root:
 
-```javascript
-// udl.config.js
+```js [udl.config.js]
 export const config = {
   port: 4000,
   host: 'localhost',
@@ -30,13 +29,13 @@ export const config = {
 
 Register an npm package by name. First, install the plugin:
 
-```bash
+```bash [Terminal]
 npm install @universal-data-layer/contentful
 ```
 
 Then register it in your config:
 
-```javascript
+```js [udl.config.js]
 export const config = {
   plugins: [
     '@universal-data-layer/contentful',
@@ -48,7 +47,7 @@ export const config = {
 
 Pass configuration options to your plugin:
 
-```javascript
+```js [udl.config.js]
 export const config = {
   plugins: [
     {
@@ -63,13 +62,11 @@ export const config = {
 };
 ```
 
-The `options` object is passed to the plugin's `onLoad` hook.
-
 ### Method 3: Local File Path
 
 Use a local plugin via relative or absolute path:
 
-```javascript
+```js [udl.config.js]
 export const config = {
   plugins: [
     './plugins/my-local-plugin',           // Relative path
@@ -80,7 +77,7 @@ export const config = {
 
 With options:
 
-```javascript
+```js [udl.config.js]
 export const config = {
   plugins: [
     {
@@ -97,8 +94,7 @@ export const config = {
 
 ### Basic Configuration
 
-```javascript
-// udl.config.js
+```js [udl.config.js]
 export const config = {
   port: 4000,
   host: 'localhost',
@@ -110,8 +106,7 @@ export const config = {
 
 ### Multiple Plugins with Options
 
-```javascript
-// udl.config.js
+```js [udl.config.js]
 export const config = {
   port: 4000,
   host: 'localhost',
@@ -147,15 +142,13 @@ export const config = {
 
 Create a `.env` file:
 
-```bash
-# .env
+```bash [.env]
 CONTENTFUL_SPACE_ID=your-space-id
 CONTENTFUL_ACCESS_TOKEN=your-access-token
 CONTENTFUL_ENV=master
 ```
 
-```javascript
-// udl.config.js
+```js [udl.config.js]
 export const config = {
   port: parseInt(process.env.PORT || '4000', 10),
   host: process.env.HOST || 'localhost',
@@ -176,8 +169,7 @@ export const config = {
 
 You can also define an `onLoad` hook in your application config:
 
-```javascript
-// udl.config.js
+```js [udl.config.js]
 export const config = {
   port: 4000,
   plugins: [
@@ -197,7 +189,7 @@ export function onLoad({ options, config }) {
 
 Plugins are loaded in the order they appear in the `plugins` array:
 
-```javascript
+```js [udl.config.js]
 export const config = {
   plugins: [
     'plugin-one',    // Loaded first
@@ -213,7 +205,7 @@ This matters if plugins have dependencies on each other.
 
 Load plugins conditionally based on environment:
 
-```javascript
+```js [udl.config.js]
 const isDevelopment = process.env.NODE_ENV === 'development';
 const isProduction = process.env.NODE_ENV === 'production';
 
@@ -231,8 +223,7 @@ export const config = {
 
 For TypeScript projects, use `.ts` or `.mts` extension:
 
-```typescript
-// udl.config.ts
+```js [udl.config.js]
 import type { UDLConfig } from 'universal-data-layer';
 
 export const config: UDLConfig = {
@@ -262,7 +253,7 @@ UDL looks for configuration files in this order:
 
 Once configured, start your server:
 
-```bash
+```bash [Terminal]
 # Using npx
 npx universal-data-layer
 
