docs: add official Contentful plugin documentation and config examples

--- a/docs/content/2.plugins/1.overview.md
+++ b/docs/content/2.plugins/1.overview.md
@@ -54,3 +54,4 @@ UDL resolves plugins in the following order:
 - [Creating a Plugin](/plugins/creating-plugins) - Learn how to build your own plugin
 - [Registering Plugins](/plugins/registering-plugins) - Learn how to configure and use plugins
 - [Lifecycle Methods](/plugins/lifecycle-methods) - Deep dive into plugin lifecycle hooks
+- [Official Plugins](/official-plugins/overview) - Browse first-party plugins maintained by the UDL team
