docs: update documentation for simplified defineConfig API
Update all documentation and README files to reflect the new simplified
defineConfig pattern across examples and usage guides.

--- a/docs/content/1.getting-started/1.installation.md
+++ b/docs/content/1.getting-started/1.installation.md
@@ -72,11 +72,9 @@ UDL uses a configuration file to define plugins and settings. Create a `udl.conf
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    port: 4000,
-    plugins: [],
-  },
+export const config = defineConfig({
+  port: 4000,
+  plugins: [],
 });
 ```
 
