--- a/docs/content/2.using-plugins/1.overview.md
+++ b/docs/content/2.using-plugins/1.overview.md
@@ -34,19 +34,17 @@ Register plugins in your `udl.config.ts` file. Use the `defineConfig` helper for
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
-          environment: 'master',
-        },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
+        environment: 'master',
       },
-    ],
-  },
+    },
+  ],
 });
 ```
 
@@ -59,10 +57,8 @@ For plugins with no configuration:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: ['my-simple-plugin'],
-  },
+export const config = defineConfig({
+  plugins: ['my-simple-plugin'],
 });
 ```
 
@@ -73,18 +69,16 @@ Pass configuration to the plugin:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: 'your-space-id',
-          accessToken: 'your-token',
-        },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: 'your-space-id',
+        accessToken: 'your-token',
       },
-    ],
-  },
+    },
+  ],
 });
 ```
 
@@ -95,18 +89,16 @@ Use a local plugin during development:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      './plugins/my-local-plugin',
-      {
-        name: './plugins/my-configured-plugin',
-        options: {
-          customSetting: 'value',
-        },
+export const config = defineConfig({
+  plugins: [
+    './plugins/my-local-plugin',
+    {
+      name: './plugins/my-configured-plugin',
+      options: {
+        customSetting: 'value',
       },
-    ],
-  },
+    },
+  ],
 });
 ```
 
@@ -123,19 +115,17 @@ CONTENTFUL_ENVIRONMENT=master
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
-          environment: process.env['CONTENTFUL_ENVIRONMENT'] || 'master',
-        },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
+        environment: process.env['CONTENTFUL_ENVIRONMENT'] || 'master',
       },
-    ],
-  },
+    },
+  ],
 });
 ```
 
@@ -146,14 +136,12 @@ Plugins load in the order they appear in the array:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      'plugin-one',   // Loads first
-      'plugin-two',   // Loads second
-      'plugin-three', // Loads third
-    ],
-  },
+export const config = defineConfig({
+  plugins: [
+    'plugin-one',   // Loads first
+    'plugin-two',   // Loads second
+    'plugin-three', // Loads third
+  ],
 });
 ```
 
@@ -168,13 +156,11 @@ import { defineConfig } from 'universal-data-layer';
 
 const isDev = process.env['NODE_ENV'] === 'development';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      '@universal-data-layer/plugin-source-contentful',
-      ...(isDev ? ['./plugins/dev-logger'] : []),
-    ],
-  },
+export const config = defineConfig({
+  plugins: [
+    '@universal-data-layer/plugin-source-contentful',
+    ...(isDev ? ['./plugins/dev-logger'] : []),
+  ],
 });
 ```
 
