--- a/docs/content/2.using-plugins/2.contentful.md
+++ b/docs/content/2.using-plugins/2.contentful.md
@@ -20,19 +20,17 @@ npm install @universal-data-layer/plugin-source-contentful
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
-          environment: 'master',
-        },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
+        environment: 'master',
       },
-    ],
-  },
+    },
+  ],
 });
 ```
 
@@ -59,19 +57,17 @@ The `indexes` option creates optimized lookup fields for single-item queries. Ad
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
-          indexes: ['slug', 'contentfulId'],
-        },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
+        indexes: ['slug', 'contentfulId'],
       },
-    ],
-  },
+    },
+  ],
 });
 ```
 
@@ -165,29 +161,27 @@ Sync tokens are stored in `.udl-cache/contentful-sync-tokens.json` by default.
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
-          syncTokenStorage: {
-            async getSyncToken(key) {
-              // Return stored token or null
-            },
-            async setSyncToken(key, token) {
-              // Store the token
-            },
-            async clearSyncToken(key) {
-              // Clear the token (optional)
-            },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
+        syncTokenStorage: {
+          async getSyncToken(key) {
+            // Return stored token or null
+          },
+          async setSyncToken(key, token) {
+            // Store the token
+          },
+          async clearSyncToken(key) {
+            // Clear the token (optional)
           },
         },
       },
-    ],
-  },
+    },
+  ],
 });
 ```
 
@@ -198,19 +192,17 @@ To fetch draft/unpublished content, use the Preview API:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_PREVIEW_TOKEN'],
-          host: 'preview.contentful.com',
-        },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_PREVIEW_TOKEN'],
+        host: 'preview.contentful.com',
       },
-    ],
-  },
+    },
+  ],
 });
 ```
 
@@ -221,27 +213,25 @@ Use `nodePrefix` to source from multiple Contentful spaces:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CMS_SPACE_ID'],
-          accessToken: process.env['CMS_ACCESS_TOKEN'],
-          nodePrefix: 'CMS',
-        },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CMS_SPACE_ID'],
+        accessToken: process.env['CMS_ACCESS_TOKEN'],
+        nodePrefix: 'CMS',
       },
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CRM_SPACE_ID'],
-          accessToken: process.env['CRM_ACCESS_TOKEN'],
-          nodePrefix: 'CRM',
-        },
+    },
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CRM_SPACE_ID'],
+        accessToken: process.env['CRM_ACCESS_TOKEN'],
+        nodePrefix: 'CRM',
       },
-    ],
-  },
+    },
+  ],
 });
 ```
 
@@ -254,22 +244,20 @@ Filter which content types to source:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
-          contentTypeFilter: (contentType) => {
-            // Only source 'product' and 'category' content types
-            return ['product', 'category'].includes(contentType.sys.id);
-          },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
+        contentTypeFilter: (contentType) => {
+          // Only source 'product' and 'category' content types
+          return ['product', 'category'].includes(contentType.sys.id);
         },
       },
-    ],
-  },
+    },
+  ],
 });
 ```
 
