--- a/docs/content/3.codegen/1.overview.md
+++ b/docs/content/3.codegen/1.overview.md
@@ -37,20 +37,18 @@ Enable codegen in your `udl.config.ts`:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
-        },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
       },
-    ],
-    codegen: {
-      output: './generated',
     },
+  ],
+  codegen: {
+    output: './generated',
   },
 });
 ```
@@ -87,13 +85,11 @@ Extensions add additional codegen capabilities. The most common is `@universal-d
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: ['@universal-data-layer/plugin-source-contentful'],
-    codegen: {
-      output: './generated',
-      extensions: ['@universal-data-layer/codegen-typed-queries'],
-    },
+export const config = defineConfig({
+  plugins: ['@universal-data-layer/plugin-source-contentful'],
+  codegen: {
+    output: './generated',
+    extensions: ['@universal-data-layer/codegen-typed-queries'],
   },
 });
 ```
