--- a/docs/content/3.codegen/2.typed-queries.md
+++ b/docs/content/3.codegen/2.typed-queries.md
@@ -22,21 +22,19 @@ Add the extension to your codegen config:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
-        },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
       },
-    ],
-    codegen: {
-      output: './generated',
-      extensions: ['@universal-data-layer/codegen-typed-queries'],
     },
+  ],
+  codegen: {
+    output: './generated',
+    extensions: ['@universal-data-layer/codegen-typed-queries'],
   },
 });
 ```
