--- a/docs/content/5.advanced/1.creating-plugins.md
+++ b/docs/content/5.advanced/1.creating-plugins.md
@@ -27,12 +27,10 @@ Create a `udl.config.ts` at your plugin root:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    type: 'source',
-    name: 'my-plugin',
-    version: '1.0.0',
-  },
+export const config = defineConfig({
+  type: 'source',
+  name: 'my-plugin',
+  version: '1.0.0',
 });
 ```
 
@@ -52,12 +50,10 @@ Called when the plugin is loaded. Use for validation and setup:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config, onLoad } = defineConfig({
-  config: {
-    type: 'source',
-    name: 'my-plugin',
-    version: '1.0.0',
-  },
+export const config = defineConfig({
+  type: 'source',
+  name: 'my-plugin',
+  version: '1.0.0',
 });
 
 export function onLoad({ options }: { options?: MyPluginOptions }) {
@@ -82,12 +78,10 @@ interface MyPluginOptions {
   endpoint?: string;
 }
 
-export const { config } = defineConfig({
-  config: {
-    type: 'source',
-    name: 'my-plugin',
-    version: '1.0.0',
-  },
+export const config = defineConfig({
+  type: 'source',
+  name: 'my-plugin',
+  version: '1.0.0',
 });
 
 export function onLoad({ options }: { options?: MyPluginOptions }) {
@@ -303,12 +297,10 @@ export interface MyItem {
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      './plugins/my-local-plugin',
-    ],
-  },
+export const config = defineConfig({
+  plugins: [
+    './plugins/my-local-plugin',
+  ],
 });
 ```
 
@@ -334,12 +326,10 @@ interface Todo {
 
 const LOG_PREFIX = '[todo-plugin]';
 
-export const { config } = defineConfig({
-  config: {
-    type: 'source',
-    name: 'todo-plugin',
-    version: '1.0.0',
-  },
+export const config = defineConfig({
+  type: 'source',
+  name: 'todo-plugin',
+  version: '1.0.0',
 });
 
 export function onLoad({ options }: { options?: TodoPluginOptions }) {
