--- a/docs/content/6.reference/1.configuration.md
+++ b/docs/content/6.reference/1.configuration.md
@@ -21,10 +21,8 @@ Use `defineConfig` for TypeScript support and autocomplete:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    // Your configuration
-  },
+export const config = defineConfig({
+  // Your configuration
 });
 ```
 
@@ -69,12 +67,10 @@ interface UDLConfig {
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    port: 3001,
-    host: '0.0.0.0',
-    endpoint: '/api/graphql',
-  },
+export const config = defineConfig({
+  port: 3001,
+  host: '0.0.0.0',
+  endpoint: '/api/graphql',
 });
 ```
 
@@ -109,27 +105,25 @@ type PluginSpec = string | {
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      // String shorthand (no options)
-      'my-simple-plugin',
+export const config = defineConfig({
+  plugins: [
+    // String shorthand (no options)
+    'my-simple-plugin',
 
-      // Object with options
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
-          environment: 'master',
-          indexes: ['slug'],
-        },
+    // Object with options
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
+        environment: 'master',
+        indexes: ['slug'],
       },
+    },
 
-      // Local plugin path
-      './plugins/my-local-plugin',
-    ],
-  },
+    // Local plugin path
+    './plugins/my-local-plugin',
+  ],
 });
 ```
 
@@ -182,16 +176,14 @@ interface CodegenConfig {
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: ['@universal-data-layer/plugin-source-contentful'],
-    codegen: {
-      output: './generated',
-      guards: true,
-      includeJsDoc: true,
-      includeInternal: true,
-      extensions: ['@universal-data-layer/codegen-typed-queries'],
-    },
+export const config = defineConfig({
+  plugins: ['@universal-data-layer/plugin-source-contentful'],
+  codegen: {
+    output: './generated',
+    guards: true,
+    includeJsDoc: true,
+    includeInternal: true,
+    extensions: ['@universal-data-layer/codegen-typed-queries'],
   },
 });
 ```
@@ -209,11 +201,9 @@ Control node caching behavior:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    // Disable caching
-    cache: false,
-  },
+export const config = defineConfig({
+  // Disable caching
+  cache: false,
 });
 ```
 
@@ -230,20 +220,18 @@ CONTENTFUL_ENVIRONMENT=master
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    port: parseInt(process.env['PORT'] || '4000', 10),
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
-          environment: process.env['CONTENTFUL_ENVIRONMENT'] || 'master',
-        },
+export const config = defineConfig({
+  port: parseInt(process.env['PORT'] || '4000', 10),
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
+        environment: process.env['CONTENTFUL_ENVIRONMENT'] || 'master',
       },
-    ],
-  },
+    },
+  ],
 });
 ```
 
@@ -254,36 +242,34 @@ import { defineConfig } from 'universal-data-layer';
 
 const isDev = process.env['NODE_ENV'] === 'development';
 
-export const { config } = defineConfig({
-  config: {
-    // Server
-    port: isDev ? 4000 : 3000,
-    host: isDev ? 'localhost' : '0.0.0.0',
+export const config = defineConfig({
+  // Server
+  port: isDev ? 4000 : 3000,
+  host: isDev ? 'localhost' : '0.0.0.0',
 
-    // Plugins
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: isDev
-            ? process.env['CONTENTFUL_PREVIEW_TOKEN']
-            : process.env['CONTENTFUL_ACCESS_TOKEN'],
-          host: isDev ? 'preview.contentful.com' : 'cdn.contentful.com',
-          environment: process.env['CONTENTFUL_ENVIRONMENT'] || 'master',
-          indexes: ['slug', 'contentfulId'],
-        },
+  // Plugins
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: isDev
+          ? process.env['CONTENTFUL_PREVIEW_TOKEN']
+          : process.env['CONTENTFUL_ACCESS_TOKEN'],
+        host: isDev ? 'preview.contentful.com' : 'cdn.contentful.com',
+        environment: process.env['CONTENTFUL_ENVIRONMENT'] || 'master',
+        indexes: ['slug', 'contentfulId'],
       },
-      // Dev-only plugin
-      ...(isDev ? ['./plugins/dev-logger'] : []),
-    ],
-
-    // Code generation
-    codegen: {
-      output: './generated',
-      guards: true,
-      extensions: ['@universal-data-layer/codegen-typed-queries'],
     },
+    // Dev-only plugin
+    ...(isDev ? ['./plugins/dev-logger'] : []),
+  ],
+
+  // Code generation
+  codegen: {
+    output: './generated',
+    guards: true,
+    extensions: ['@universal-data-layer/codegen-typed-queries'],
   },
 });
 ```
