--- a/docs/content/4.frameworks/1.nextjs.md
+++ b/docs/content/4.frameworks/1.nextjs.md
@@ -31,23 +31,21 @@ Create `udl.config.ts` in your project root:
 ```typescript [udl.config.ts]
 import { defineConfig } from 'universal-data-layer';
 
-export const { config } = defineConfig({
-  config: {
-    plugins: [
-      {
-        name: '@universal-data-layer/plugin-source-contentful',
-        options: {
-          spaceId: process.env['CONTENTFUL_SPACE_ID'],
-          accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
-          environment: process.env['CONTENTFUL_ENVIRONMENT'] || 'master',
-          indexes: ['slug'],
-        },
+export const config = defineConfig({
+  plugins: [
+    {
+      name: '@universal-data-layer/plugin-source-contentful',
+      options: {
+        spaceId: process.env['CONTENTFUL_SPACE_ID'],
+        accessToken: process.env['CONTENTFUL_ACCESS_TOKEN'],
+        environment: process.env['CONTENTFUL_ENVIRONMENT'] || 'master',
+        indexes: ['slug'],
       },
-    ],
-    codegen: {
-      output: './generated',
-      extensions: ['@universal-data-layer/codegen-typed-queries'],
     },
+  ],
+  codegen: {
+    output: './generated',
+    extensions: ['@universal-data-layer/codegen-typed-queries'],
   },
 });
 ```
