feat(core): add remote sync for syncing from production UDL server
Add `remote.url` config option that allows local UDL servers to sync
data from a remote production server instead of sourcing from plugins.

Features:
- Fetches all nodes from remote /_sync endpoint on startup
- Connects to remote WebSocket for real-time updates (if enabled)
- Gracefully handles WebSocket unavailability
- Skips local plugin loading when remote.url is configured

New files:
- packages/core/src/websocket/client.ts - WebSocket client
- packages/core/src/sync/remote.ts - Remote sync logic

New exports:
- UDLWebSocketClient, WebSocketClientConfig
- fetchRemoteNodes, tryConnectRemoteWebSocket, initRemoteSync

Documentation:
- Added deployment section with production, standalone, webhook, and
  remote sync guides

--- a/docs/content/1.getting-started/1.installation.md
+++ b/docs/content/1.getting-started/1.installation.md
@@ -88,3 +88,4 @@ The `defineConfig` helper provides TypeScript autocompletion and validation. Sup
 
 - [Your First Query](/getting-started/first-query) - Make your first GraphQL query
 - [Exploring GraphQL](/getting-started/exploring-graphql) - Learn GraphQL basics with GraphiQL
+- [Production Deployment](/deployment/production-overview) - Deploy UDL for production use
