--- a/docs/content/4.frameworks/1.nextjs.md
+++ b/docs/content/4.frameworks/1.nextjs.md
@@ -308,3 +308,4 @@ The example includes:
 
 - [Typed Queries](/codegen/typed-queries) - Learn more about TypedDocumentNode generation
 - [Querying Data](/using-plugins/querying-data) - Advanced query patterns
+- [Production Deployment](/deployment/production-overview) - Deploy UDL with your app
