--- a/docs/content/6.reference/1.configuration.md
+++ b/docs/content/6.reference/1.configuration.md
@@ -278,3 +278,4 @@ export const config = defineConfig({
 
 - [Plugin Overview](/using-plugins/overview) - How to use plugins
 - [Creating Plugins](/advanced/creating-plugins) - Build custom plugins
+- [Production Deployment](/deployment/production-overview) - Deploy UDL for production
